--- a/Desafios/Desafio 12/style.css
+++ b/Desafios/Desafio 12/style.css
@@ -1,11 +1,24 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Passion+One&family=Sriracha&display=swap');
+
+
+@import url('https://fonts.googleapis.com/css2?family=Passion+One&family=Sriracha&display=swap');
+
+:root{
+    --fonte1: Verdana, Geneva, Tahoma, sans-serif;
+    --fonte2: 'Passion One', cursive;
+    --fonte3: 'Sriracha', cursive;
+}
+
 *{
     margin: 0px;
     padding: 0px;
+    font-size: 1em;
 }
 
 html, body{
+    font-family: var(--fonte1);
     min-height: 100vh;
     background-color: darkgray;
 }
@@ -19,6 +32,8 @@ header{
 header > h1{
     padding-top: 50px;
     font-variant: small-caps;
+    font-family: var(--fonte2);
+    font-size: 5vw;
 }
 
 header > p{
@@ -29,7 +44,6 @@ header a, footer a{
     color: white;
     font-weight: bolder;
     text-decoration: none;
-
 }
 
 header a:hover, footer a:hover{
@@ -41,12 +55,13 @@ section{
     padding-bottom: 10vh;
     line-height: 2em;
     padding-left: 30px;
+    font-family: var(--fonte3);
+    font-size: 3.5vw;
 }
 
 section.normal{
     background-color: white;
     color: black;
-
 }
 
 section.imagem{
@@ -55,8 +70,9 @@ section.imagem{
 }
 
 section.imagem > p{
+    display: inline-block;
     background-color: rgba(0, 0, 0, 0.171);
-    width: 400px;
+    padding: 10px;
 }
 
 footer {
